--- a/index.html
+++ b/index.html
@@ -16,6 +16,49 @@
   </form>
 <script>
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
+// An empty array for the data we're returning.
+const cities = [];
+
+//fetch is an API built into the browser. A BLOB is a binary large object that can hold a variable amount of data. The four BLOB types are TINYBLOB , BLOB , MEDIUMBLOB , and LONGBLOB . The BLOB data type is used to store large amounts of binary data, such as image files, audio files, or other types of binary data.
+fetch(endpoint)
+  .then(blob => blob.json())
+  // how do we get each and every city in the array? If we push multiple arguments into an array, it will push them all into the array as individual items. So we can use the spread operator to spread out the array into individual elements.
+  .then(data => cities.push(...data));
+
+  function findMatches  (wordToMatch, cities) {
+    return cities.filter(place => {
+      // here we need to figure out if the city or state matches what was searched. The 'g' modifier is used to perform a global match (find all matches rather than stopping after the first match).
+        const regex = new RegExp(wordToMatch, 'gi');
+      return place.city.match(regex) || place.state.match(regex)
+    });
+  }
+
+    function numberWithCommas(x) {
+        return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+    }
+
+  function displayMatches() {
+   const matchArray = findMatches(this.value, cities);
+   const html = matchArray.map(place => {
+    // we want to create a regex(register expression) that will highlight the word that matches the search. We need to search globally below so it keeps searching after the first match.
+    const regex = new RegExp(this.value, 'gi');
+    const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`);
+    const stateName = place.state.replace(regex, `<span class="hl">${this.value}</span>`);
+    return `
+    <li>
+        <span class="name">${cityName}, ${stateName}</span>
+        <span class="population">${numberWithCommas(place.population)}</span>
+    </li>
+    `;  
+    }).join('');    
+    suggestions.innerHTML = html; 
+  } 
+
+  const searchInput = document.querySelector('.search');
+    const suggestions = document.querySelector('.suggestions');
+
+    searchInput.addEventListener('change', displayMatches);
+    searchInput.addEventListener('keyup', displayMatches);
 
 </script>
 </body>
